--- a/Core2/NuGetHandler/App.optional.config
+++ b/Core2/NuGetHandler/App.optional.config
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<!--This is the solution App.optional.config file-->
 <configuration>
 	<appSettings>
 		<add key="SuspendHandling" value="false"/>
@@ -7,24 +6,30 @@
 		<add key="AllowOptionalAppConfig" value="true"/>
 		<add key="UseConfigOverride" value="false"/>
 		<add key="ConfigOverrideDir" value=""/>
-		<add key="ForceVersionOverride" value="true"/>
-		<add key="VersionOverride" value="10.11.12.13"/>
+		<add key="ForceVersionOverride" value="false"/>
+		<add key="VersionOverride" value=""/>
 		<add key="NuGetDir" value="%APPDATA%\NuGet\"/>
 		<add key="NuGetExeName" value="NuGet"/>
 		<add key="DotNetDir" value="%PROGRAMFILES%\dotnet"/>
 		<add key="DotNetName" value="dotnet"/>
 		<add key="DotNetVerb" value="nuget"/>
+		<add key="UseSimulator" value="false"/>
+		<add key="DotNetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulator\"/>
+		<add key="DotNetSimulatorExeName" value="NuGetSimulator.dll"/>
+		<add key="NuGetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulatorFF\"/>
+		<add key="NuGetSimulatorExeName" value="NuGetSimulator"/>
 		<add key="DefaultVerbosity" value="quiet"/>
 		<add key="PackageHomeDir" value="%APPDATA%\NuGet\PackageHome\"/>
 		<add key="RequireReleaseNotesFile" value="false"/>
 		<add key="ReleaseNotesFileName" value="ReleaseNotes.txt"/>
+		<add key="InjectDefaultReleaseNotes" value="true"/>
+		<add key="DefaultReleaseNotes" value="No Custom Release Notes for"/>
 		<add key="RequireSummaryFile" value="false"/>
 		<add key="SummaryFileName" value="Summary.txt"/>
 		<!--The DefaultDeleteFileName file will be stored in the PackageHomeDir-->
 		<add key="DefaultDeleteFileName" value="DeleteFromNuGet.del"/>
-		<add key="UseNuSpecFileIfAvailable" value="true"/>
-		<add key="InjectDefaultReleaseNotes" value="true"/>
-		<add key="DefaultReleaseNotes" value="No Custom Release Notes for"/>
+		<add key="UseNuSpecFileIfAvailable" value="false"/>
+		<add key="DeleteNuSpecFileAfterProcessing" value="true"/>
 		<!--Replaceable Tokens-->
 		<add key="BasePath" value=""/>
 		<add key="ConfigFile" value=""/>
@@ -42,9 +47,9 @@
 		<add key="RuntimeIdentifier" value=""/>
 		<add key="Timeout" value=""/>
 	</appSettings>
-	<NuGetNuGetNuSpecSettings>
+	<NuGetNuSpecSettings>
 		<add key="ForceAuthors" value="false"/>
-		<add key="Authors" value="Authored by Az Web Engineering - Solution"/>
+		<add key="Authors" value="Authored by Az Web Engineering - Project (NuGetHandler)"/>
 		<add key="ForceCopyright" value="false"/>
 		<add key="Copyright" value="Copyright © 2012 Az Web Engineering"/>
 		<add key="ForceDescription" value="false"/>
@@ -67,61 +72,13 @@
 		<add key="Tags" value="AWE"/>
 		<add key="ForceTitle" value="false"/>
 		<add key="Title" value=""/>
-		<!-- 
-		"Id" and "Version" are handled elsewhere. The "Id" value is left as-is,
-		"Version" is handled by the "ForceVersionOverride" and "VersionOverride"
-		values as found in the app settings section.
-		
-		<add key="Id" value=""/>
-		<add key="Version" value=""/>
-		-->
-
-		<!-- The equivalent values from a .NET Standard 2.0 .csproj 
-		
-		*** Looks like "Company" equals "Owners" above.
-		*** Summary from full framework is NOT supported.
-		
-		<AssemblyVersion>8.0.0.1</AssemblyVersion>
-		<Authors>Az Web Engineering</Authors>
-		<Company>Az Web Engineering</Company>
-		<Copyright>Copyright © Az Web Engineering</Copyright>
-		<Description>Prototype DotNet Standard 2.0 Class Library</Description>
-		<FileVersion>9.0.0.1</FileVersion>
-		<PackageIconUrl>IconUrl</PackageIconUrl>
-		<PackageLicenseUrl>LicenseUrl</PackageLicenseUrl>
-		<PackageProjectUrl>ProjectUrl</PackageProjectUrl>
-		<PackageReleaseNotes>Initial Release Notes.</PackageReleaseNotes>
-		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<PackageTags>AWE Library DotNetCore</PackageTags>
-		<Version>3.0.0.1</Version>
-		
-		-->
-
-		<!-- The equivalent values from a .NET Core 2.0 csproj file.
-		
-		<AssemblyVersion>5.0.0.1</AssemblyVersion>
-		<Authors>Authoried by Az Web Engineering</Authors>
-		<Company>Company is Authoried by Az Web Engineering</Company>
-		<Copyright>Copyright ©  Az Web Engineering 2018</Copyright>
-		<Description>External handler for NuGet.exe and dotnet nuget commands.</Description>
-		<FileVersion>2.0.0.0</FileVersion>
-		<PackageIconUrl>Url</PackageIconUrl>
-		<PackageLicenseUrl>LicenseUrl</PackageLicenseUrl>
-		<PackageProjectUrl>ProjectUrl</PackageProjectUrl>
-		<PackageReleaseNotes>Relase Notes</PackageReleaseNotes>
-		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<PackageTags>AWE</PackageTags>
-		<Version>4.0.0.1</Version>
-
-		-->
-
-	</NuGetNuGetNuSpecSettings>
+	</NuGetNuSpecSettings>
 	<DotNetNuSpecSettings>
 		<add key="UseNuGetNuSpecValues" value="false"/>
 		<add key="ForceAssemblyVersion" value="false"/>
 		<add key="AssemblyVersion" value=""/>
 		<add key="ForceAuthors" value="true"/>
-		<add key="Authors" value="Az Web Engineering authored this and it's noted in the Solution app.config file"/>
+		<add key="Authors" value="Az Web Engineering authored this and it's noted in the NuGetHandler app.config file"/>
 		<add key="ForceCompany" value="false"/>
 		<add key="Company" value=""/>
 		<add key="ForceCopyright" value="false"/>
