--- a/Core2/NuGetHandler/NuGetHandler/App.config
+++ b/Core2/NuGetHandler/NuGetHandler/App.config
@@ -3,21 +3,21 @@
 	<appSettings>
 		<add key="SuspendHandling" value="false"/>
 		<add key="PushToDestination" value="HomeAWEHome3"/>
-		<add key="AllowOptionalAppConfig" value="true"/>
-		<add key="UseConfigOverride" value="true"/>
-		<add key="ConfigOverrideDir" value="C:\Users\Sam\Documents\Visual Studio 2017\Projects\Core 2\"/>
-		<add key="ForceVersionOverride" value="true"/>
-		<add key="VersionOverride" value="9.8.7.6"/>
+		<add key="AllowOptionalAppConfig" value="false"/>
+		<add key="UseConfigOverride" value="false"/>
+		<add key="ConfigOverrideDir" value=""/>
+		<add key="ForceVersionOverride" value="false"/>
+		<add key="VersionOverride" value=""/>
 		<add key="NuGetDir" value="%APPDATA%\NuGet\"/>
 		<add key="NuGetExeName" value="NuGet"/>
 		<add key="DotNetDir" value="%PROGRAMFILES%\dotnet"/>
 		<add key="DotNetName" value="dotnet"/>
 		<add key="DotNetVerb" value="nuget"/>
-		<add key="UseSimulator" value="false"/>
+		<add key="UseSimulator" value="true"/>
 		<add key="DotNetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulator\"/>
 		<add key="DotNetSimulatorExeName" value="NuGetSimulator.dll"/>
 		<add key="NuGetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulatorFF\"/>
-		<add key="NuGetSimulatorExeName" value="NuGetSimulator"/>
+		<add key="NuGetSimulatorExeName" value="NuGetSimulatorFF"/>
 		<add key="DefaultVerbosity" value="quiet"/>
 		<add key="PackageHomeDir" value="%APPDATA%\NuGet\PackageHome\"/>
 		<add key="RequireReleaseNotesFile" value="false"/>
@@ -28,7 +28,8 @@
 		<add key="SummaryFileName" value="Summary.txt"/>
 		<!--The DefaultDeleteFileName file will be stored in the PackageHomeDir-->
 		<add key="DefaultDeleteFileName" value="DeleteFromNuGet.del"/>
-		<add key="UseNuSpecFileIfAvailable" value="true"/>
+		<add key="UseNuSpecFileIfAvailable" value="false"/>
+		<add key="DeleteNuSpecFileAfterProcessing" value="true"/>
 		<!--Replaceable Tokens-->
 		<add key="BasePath" value=""/>
 		<add key="ConfigFile" value=""/>
@@ -146,7 +147,7 @@
 		<add key="PackageRequireLicenseAcceptance" value=""/>
 		<add key="ForcePackageTags" value="false"/>
 		<add key="PackageTags" value=""/>
-		<add key="ForceVersion" value="true"/>
+		<add key="ForceVersion" value="false"/>
 		<add key="Version" value=""/>
 	</DotNetNuSpecSettings>
 	<DotNetFullFrameworkCommandSequence>
@@ -159,13 +160,13 @@
 	</DotNetFullFrameworkCommandSequence>
 	<DotNetStandard_2_0_CommandSequence>
 		<!--All keys must be expressed as lower case values e.g. "spec"-->
-		<add key="pack" value='"$ProjectPath$" --configuration $ConfigurationName$ --force --no-build --no-restore --output "$OutputPackageTo$" --serviceable --verbosity $VerbosityDotNet$'/>
+		<add key="pack" value='"$ProjectPath$" --configuration $ConfigurationName$ --force --no-build --no-restore --output "$OutputPackageTo$" --serviceable /property:Version=$PackageVersion$ --verbosity $VerbosityDotNet$'/>
 		<add key="push" value='"$PackagePath$" --source $Source$ --api-key $ApiKey$'/>
 		<add key="delete" value='$PackageId$ $PackageVersion$ --source $Source$ --non-interactive --api-key $ApiKey$'/>
 	</DotNetStandard_2_0_CommandSequence>
 	<DotNetCore_2_0_CommandSequence>
 		<!--All keys must be expressed as lower case values e.g. "spec"-->
-		<add key="pack" value='"$ProjectPath$" --configuration $ConfigurationName$ --force --no-build --no-restore --output "$OutputPackageTo$" --serviceable --verbosity $VerbosityDotNet$'/>
+		<add key="pack" value='"$ProjectPath$" --configuration $ConfigurationName$ --force --no-build --no-restore --output "$OutputPackageTo$" --serviceable /property:Version=$PackageVersion$ --verbosity $VerbosityDotNet$'/>
 		<add key="push" value='"$PackagePath$" --source $Source$ --api-key $ApiKey$'/>
 		<add key="delete" value='$PackageId$ $PackageVersion$ --source $Source$ --non-interactive --api-key $ApiKey$'/>
 	</DotNetCore_2_0_CommandSequence>
@@ -184,7 +185,7 @@
 			server values to match up correctly.
 		--> 
 		<add key="LocalVM" value="http://localhost:2017/api/v2/package;{939E85ED-E2EE-411A-8916-BB152861CCEA}"/>
-		<add key="HomeAWE" value="http://192.168.1.25/api/v2/package;{F7FF5EEA-1805-45DE-8709-511B83CCF0EC}"/>
+		<add key="HomeAWE" value="http://192.168.1.25/api/v2/package;{F7FF5EEA-1805-45DE-FFFF-511B83CCF0EC}"/>
 		<add key="HomeAWE3" value="http://www.awenugetserver3.com/nuget;{939E85ED-E2EE-411A-8916-BB152861CCEA}"/>
 		<add key="localShare" value="c:\Packages2017\LocalRepository"/>
 	</NuGetRepos>
