--- a/Core2/NuGetHandler/NuGetHandler/App.config
+++ b/Core2/NuGetHandler/NuGetHandler/App.config
@@ -13,7 +13,7 @@
 		<add key="DotNetDir" value="%PROGRAMFILES%\dotnet"/>
 		<add key="DotNetName" value="dotnet"/>
 		<add key="DotNetVerb" value="nuget"/>
-		<add key="UseSimulator" value="true"/>
+		<add key="UseSimulator" value="false"/>
 		<add key="DotNetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulator\"/>
 		<add key="DotNetSimulatorExeName" value="NuGetSimulator.dll"/>
 		<add key="NuGetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulatorFF\"/>
@@ -184,15 +184,10 @@
 			position *MUST* be delimited by a semi-colon in order for the symbol
 			server values to match up correctly.
 		--> 
-<<<<<<< HEAD
-		<add key="LocalVM" value="http://localhost:2017/api/v2/package;{939E85ED-E2EE-411A-8916-BB152861CCEA}"/>
-		<add key="HomeAWE" value="http://192.168.1.25/api/v2/package;{F7FF5EEA-1805-45DE-FFFF-511B83CCF0EC}"/>
-		<add key="HomeAWE3" value="http://www.awenugetserver3.com/nuget;{939E85ED-E2EE-411A-8916-BB152861CCEA}"/>
-=======
-		<add key="LocalVM" value="http://localhost:2017/api/v2/package;{939E85ED-E2EE-411A-1026-BB152861CCEA}"/>
-		<add key="HomeAWE" value="http://192.168.1.25/api/v2/package;{F7FF5EEA-1805-45DE-3045-511B83CCF0EC}"/>
-		<add key="HomeAWE3" value="http://www.awenugetserver3.com/nuget;{939E85ED-E2EE-6937-8916-BB152861CCEA}"/>
->>>>>>> master
+		<!--<add key="LocalVM" value="http://localhost:2017/api/v2/package;{D65D9715-BD9B-4EB9-9A60-CDE6C21E81A1}"/>-->
+		<add key="LocalVM" value="http://localhost:2017/nuget;{D65D9715-BD9B-4EB9-9A60-CDE6C21E81A1}"/>
+		<add key="HomeAWE" value="http://192.168.1.25/api/v2/package;{F7FF5EEA-1805-45DE-8709-511B83CCF0EC}"/>
+		<add key="HomeAWE3" value="http://www.awenugetserver3.com/nuget;{BAF71846-6732-4305-B469-9046B9F42388}"/>
 		<add key="localShare" value="c:\Packages2017\LocalRepository"/>
 	</NuGetRepos>
 	<NuGetDestinations>
