--- a/Core2/NuGetHandler/AppConfigConfigurationBuilder/AppConfigConfigurationBuilder.csproj
+++ b/Core2/NuGetHandler/AppConfigConfigurationBuilder/AppConfigConfigurationBuilder.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <Version>9.0.0.2</Version>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.1.0" />
