--- a/Core2/NuGetHandler/NuGetHandler/App.config
+++ b/Core2/NuGetHandler/NuGetHandler/App.config
@@ -3,7 +3,7 @@
 	<appSettings>
 		<add key="SuspendHandling" value="false"/>
 		<add key="PushToDestination" value="HomeAWEHome3"/>
-		<add key="AllowOptionalAppConfig" value="false"/>
+		<add key="AllowOptionalAppConfig" value="true"/>
 		<add key="UseConfigOverride" value="false"/>
 		<add key="ConfigOverrideDir" value=""/>
 		<add key="ForceVersionOverride" value="false"/>
