--- a/Core2/NuGetHandler/NuGetHandler/NuGetHandler.csproj
+++ b/Core2/NuGetHandler/NuGetHandler/NuGetHandler.csproj
@@ -24,6 +24,9 @@
     <LangVersion>latest</LangVersion>
     <DocumentationFile></DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.0" />
