--- a/Core2/NuGetHandler/NuGetSimulatorFF/NuGetSimulatorFF.csproj
+++ b/Core2/NuGetHandler/NuGetSimulatorFF/NuGetSimulatorFF.csproj
@@ -51,11 +51,19 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>IF NOT $(ConfigurationName) == Release GOTO NOT_RELEASE
-DEL "%25APPDATA%25\NuGet\NuGetSimulatorFF\*.*" /Q &gt; NUL
-MOVE "$(TargetDir)*.*" "%25APPDATA%25\NuGet\NuGetSimulatorFF" &gt; NUL
+    <PostBuildEvent>@echo off
+IF NOT $(ConfigurationName) == Release GOTO NOT_RELEASE
+IF EXIST "$(SolutionDir)CopyToT4Support.bat" CALL "$(SolutionDir)CopyToT4Support" "$(TargetPath)" "$(SolutionDir)"
+IF NOT EXIST "%25VSProjectsDir%25NuGetHandler.bat" GOTO DIRECT
+CALL "%25VSProjectsDir%25NuGetHandler.bat"  "$(TargetPath)" "$(SolutionPath)" "$(ProjectPath)" $(ConfigurationName)
+GOTO END
+:DIRECT
+IF NOT EXIST "%25APPDATA%25\NuGet\win10-x64\NuGetHandler.dll" GOTO END
+dotnet "%25APPDATA%25\NuGet\win10-x64\NuGetHandler.dll" -T "$(TargetPath)" -S "$(SolutionPath)" -P "$(ProjectPath)" -C $(ConfigurationName) -V normal
 GOTO END
 :NOT_RELEASE
-:END</PostBuildEvent>
+GOTO END
+:END
+</PostBuildEvent>
   </PropertyGroup>
 </Project>
