--- a/Core2/NuGetHandler/NuGetHandler/App.config
+++ b/Core2/NuGetHandler/NuGetHandler/App.config
@@ -8,6 +8,8 @@
 		<add key="ConfigOverrideDir" value=""/>
 		<add key="ForceVersionOverride" value="false"/>
 		<add key="VersionOverride" value=""/>
+		<add key="UseDateBasedVersion" value="false"/>
+		<add key="AutoIncrementBuildNumber" value="false"/>
 		<add key="NuGetDir" value="%APPDATA%\NuGet\"/>
 		<add key="NuGetExeName" value="NuGet"/>
 		<add key="DotNetDir" value="%PROGRAMFILES%\dotnet"/>
