NuGetHandler refactored to handle multiple Core versions

--- a/Core2/NuGetHandler/NuGetHandler/App.config
+++ b/Core2/NuGetHandler/NuGetHandler/App.config
@@ -172,6 +172,12 @@
 		<add key="push" value='"$PackagePath$" --source $Source$ --api-key $ApiKey$'/>
 		<add key="delete" value='$PackageId$ $PackageVersion$ --source $Source$ --non-interactive --api-key $ApiKey$'/>
 	</DotNetCore_2_0_CommandSequence>
+	<DotNetCore_2_1_CommandSequence>
+		<!--All keys must be expressed as lower case values e.g. "spec"-->
+		<add key="pack" value='"$ProjectPath$" --configuration $ConfigurationName$ --force --no-build --no-restore --output "$OutputPackageTo$" --serviceable /property:Version=$PackageVersion$ --verbosity $VerbosityDotNet$'/>
+		<add key="push" value='"$PackagePath$" --source $Source$ --api-key $ApiKey$'/>
+		<add key="delete" value='$PackageId$ $PackageVersion$ --source $Source$ --non-interactive --api-key $ApiKey$'/>
+	</DotNetCore_2_1_CommandSequence>
 	<NuGetRepos>
 		<!--
 			The following entries *MUST* come in pairs or quads. Each entry translates
