Updated NuGetHnadler - fixing automated versionin

--- a/Core2/NuGetHandler/App.optional.config
+++ b/Core2/NuGetHandler/App.optional.config
@@ -19,7 +19,7 @@
 		<add key="DotNetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulator\"/>
 		<add key="DotNetSimulatorExeName" value="NuGetSimulator.dll"/>
 		<add key="NuGetSimulatorDir" value="%APPDATA%\NuGet\NuGetSimulatorFF\"/>
-		<add key="NuGetSimulatorExeName" value="NuGetSimulator"/>
+		<add key="NuGetSimulatorExeName" value="NuGetSimulatorFF"/>
 		<add key="DefaultVerbosity" value="quiet"/>
 		<add key="PackageHomeDir" value="%APPDATA%\NuGet\PackageHome\"/>
 		<add key="RequireReleaseNotesFile" value="false"/>
