--- a/Core2/NuGetHandler/NuGetHandler/App.config
+++ b/Core2/NuGetHandler/NuGetHandler/App.config
@@ -2,14 +2,14 @@
 <configuration>
 	<appSettings>
 		<add key="SuspendHandling" value="false"/>
-		<add key="PushToDestination" value="HomeAWEHome3"/>
-		<add key="AllowOptionalAppConfig" value="true"/>
+		<add key="PushToDestination" value="LocalOnly"/>
+		<add key="AllowOptionalAppConfig" value="false"/>
 		<add key="UseConfigOverride" value="false"/>
 		<add key="ConfigOverrideDir" value=""/>
 		<add key="ForceVersionOverride" value="false"/>
 		<add key="VersionOverride" value=""/>
-		<add key="UseDateBasedVersion" value="false"/>
-		<add key="AutoIncrementBuildNumber" value="false"/>
+		<add key="UseDateBasedVersion" value="true"/>
+		<add key="AutoIncrementBuildNumber" value="true"/>
 		<add key="NuGetDir" value="%APPDATA%\NuGet\"/>
 		<add key="NuGetExeName" value="NuGet"/>
 		<add key="DotNetDir" value="%PROGRAMFILES%\dotnet"/>
